# US_Voting_Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: data_processor.py  precinct_analysis.py  process_data.py
